Updated readme, data.sql and savingin data for better purposes.